--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="grass"> </div>
 
         <div class="road">
-            <div class="ai">
+            <div class="ai" id="ai">
                 <div class="sensor_1">1</div>
-                <div class="sensor_2">2</div>
+                <div class="sensor_2" id="sensor_2">2</div>
                 <div class="sensor_3">3</div>
             </div>
             <div class="wall" id="wall"></div>
