--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="scene">
 
-        <div class="grass"> </div>
+        <div class="grass" id="topDebug"> </div>
 
         <div class="road">
             <div class="ai" id="ai">
@@ -30,7 +30,6 @@
     </div>
     <div class="debugArea">
 
-        <textarea id="debugTextArea" class="debugClassArea">N/A</textarea>
         <input type="text" id="stepsDone" value="0" style="width:50px" />
         <input type="button" value="Start" onclick="runSim('1')" />
         <input type="button" value="Stop" onclick="runSim('0')" />
