--- a/index.html
+++ b/index.html
@@ -33,6 +33,71 @@
         <input type="text" id="stepsDone" value="0" style="width:50px" />
         <input type="button" value="Start" onclick="runSim('1')" />
         <input type="button" value="Stop" onclick="runSim('0')" />
+
+        <br>
+
+        <table class="tableDebug">
+            <tr>
+                <td>AI zone</td>
+                <td>Wall zone</td>
+                <td>Experience success</td>
+                <td>Experience suggestion</td>
+                <td>Trying</td>
+            </tr>
+
+            <tr>
+
+                <td id="t_ai_zone">-</td>
+                <td id="t_wall_zone">-</td>
+                <td id="t_exp_success">-</td>
+                <td id="t_exp_sugg">-</td>
+                <td id="t_try">-</td>
+
+            </tr>
+
+        </table>
+
+        <br>
+
+        <table class="tableDebugSmall">
+            <tr>
+                <td>[AI zone][Wall zone][Do]</td>
+                <td>[Success]</td>
+            </tr>
+            <tr>
+                <td id="exp_1">000</td>
+                <td id="succ_1">-</td>
+            </tr>
+            <tr>
+                <td id="exp_2">001</td>
+                <td id="succ_2">-</td>
+            </tr>
+            <tr>
+                <td id="exp_3">010</td>
+                <td id="succ_3">-</td>
+            </tr>
+            <tr>
+                <td id="exp_4">011</td>
+                <td id="succ_4">-</td>
+            </tr>
+            <tr>
+                <td id="exp_5">100</td>
+                <td id="succ_5">-</td>
+            </tr>
+            <tr>
+                <td id="exp_6">101</td>
+                <td id="succ_6">-</td>
+            </tr>
+            <tr>
+                <td id="exp_7">110</td>
+                <td id="succ_7">-</td>
+            </tr>
+            <tr>
+                <td id="exp_8">111</td>
+                <td id="succ_8">-</td>
+            </tr>
+        </table>
+        <br>
     </div>
 </body>
 <script src="./script.js"></script>
