--- a/index.html
+++ b/index.html
@@ -66,35 +66,35 @@
             </tr>
             <tr>
                 <td id="exp_1">000</td>
-                <td id="succ_1">-</td>
+                <td id="succ_000">0</td>
             </tr>
             <tr>
                 <td id="exp_2">001</td>
-                <td id="succ_2">-</td>
+                <td id="succ_001">0</td>
             </tr>
             <tr>
                 <td id="exp_3">010</td>
-                <td id="succ_3">-</td>
+                <td id="succ_010">0</td>
             </tr>
             <tr>
                 <td id="exp_4">011</td>
-                <td id="succ_4">-</td>
+                <td id="succ_011">0</td>
             </tr>
             <tr>
                 <td id="exp_5">100</td>
-                <td id="succ_5">-</td>
+                <td id="succ_100">0</td>
             </tr>
             <tr>
                 <td id="exp_6">101</td>
-                <td id="succ_6">-</td>
+                <td id="succ_101">0</td>
             </tr>
             <tr>
                 <td id="exp_7">110</td>
-                <td id="succ_7">-</td>
+                <td id="succ_110">0</td>
             </tr>
             <tr>
                 <td id="exp_8">111</td>
-                <td id="succ_8">-</td>
+                <td id="succ_111">0</td>
             </tr>
         </table>
         <br>
